...
            android:layout_marginTop="8dp"
            android:autoLink="web"
            android:linksClickable="true"
            android:textColorLink="@color/primary_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_description" />

        <TextView
            android:id="@+id/txt_repo_created_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
...
