...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/card_repo"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:padding="8dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        android:foreground="?selectableItemBackground"
...
